--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
-            
+            <div class="my-style">
+                <h3>Chris Wehner: loves <em>hiking</em> in Las Vegas, NV</h3>
+            </div>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
